--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,20 +1,20 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content class="background-img" [formGroup]="pwdForm">
+	<section class="full-width" style="height: 46%;">
+		<ion-fab-button color="light" style="height: 100%; width: auto; margin-top: 45%; margin-right: 2rem; margin-left: 2rem;">
+			<img *ngIf="!on" src="/assets/off.png" (click)="onClick()">
+			<img *ngIf="on" src="/assets/on.png" (click)="offClick()">
+		</ion-fab-button>
+	</section>
+	<ion-grid>	
+		<ion-row class="mt-4">
+			<ion-col size="2"></ion-col>
+			<ion-col size="8">
+				<ion-item class="ion-background-color">
+					<ion-input required class="placeholder-text t-color" type="password" placeholder="Contraseña" formControlName="password"></ion-input>
+				</ion-item>
+			</ion-col>
+			<ion-col size="2"></ion-col>
+		</ion-row>
+	</ion-grid>
+	
 </ion-content>
