--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,27 +1,28 @@
-#container {
+
+.background-img {
+  //--background: url(../../assets/chat.jpg);
+  //--background:rgb(172, 172, 172);
+  //--background:linear-gradient(rgb(75, 186, 231), rgb(7, 246, 146));
+  //--background: rgb(75, 186, 231);
+  --background: #73deff;
+}
+
+
+.background-color {
+  --background:rgb(114, 106, 106);
+   --color:rgb(255, 255, 255);
+ }
+
+ 
+.placeholder-text {
+  --placeholder-color:rgb(0, 0, 0);
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.t-color {
+  --color:rgba(0, 0, 0, 0.514);
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.ion-background-color {
+    --ion-background-color:rgba(0, 0, 0, 0);
 }
